# buildcrew-dash

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  pyrightconfig.json  uninstall.sh
src/buildcrew_dash/: __main__.py  activity_reader.py  backlog_reader.py  log_parser.py  manifest_reader.py  scanner.py  state_reader.py  stop_control.py  uat_reader.py
src/buildcrew_dash/screens/: index.py  kanban.py
tests/: test_activity_reader.py  test_backlog_reader.py  test_index_screen.py  test_kanban_screen.py  test_log_parser.py  test_main_dispatch.py  test_manifest_reader.py  test_scanner.py  test_smoke.py  test_state_reader.py  test_stop_control.py  test_uat_reader.py
tests/e2e/: experience.py
tests/fixtures/: .uat-state  verdict.json
tests/fixtures/manifests/: basic.json  mixed_status.json
tests/fixtures/states/: complete.state  running.state
tests/tdd/: test_ac01_format_phase_duration.py  test_ac02_ac08_kanban_strip.py  test_ac04_ac05_manifest_failure_statuses.py  test_ac06_ac07_kanban_failure_display.py  test_ac09_ac13_index_duration.py  test_edge_adv_phase_duration.py
