[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "buildcrew-dash"
version = "0.7.0"
requires-python = ">=3.11"
dependencies = ["textual>=0.47.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "anyio[trio]>=4.0"]

[project.scripts]
buildcrew-dash = "buildcrew_dash.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
